--- a/showers.tex
+++ b/showers.tex
@@ -2,6 +2,9 @@
 \label{sec:showers}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Overview}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Extensive air shower phenomenology}
@@ -12,17 +15,16 @@
 \label{sec:showers:phen:em}
 
 %%================================%%
-\subsection{Hadronic component and muon production}
+\subsection{Hadronic component}
 \label{sec:showers:phen:had}
 
 %%================================%%
-\subsection{Longitudinal and lateral profiles}
-\label{sec:showers:phen:prof}
+\subsection{Muon production}
+\label{sec:showers:phen:muon}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Extensive air shower simulations}
-
 
 -softwares: CORSIKA, CONEX, etc
 
@@ -36,11 +38,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Measurements of EAS observables and UHECR composition}
 
+
 %%================================%%
 \subsection{Shower maximum (\xmax) and UHECR composition}
 
 %%================================%%
-\subsection{Number of muons (\nmu) and the muon excess}
+\subsection{Number of muons (\nmu) and the muon deficit}
 
 %%================================%%
 \subsection{Muon production depth (\xmumax)}
