--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -25,11 +25,17 @@
 \newcommand{\s}{\ensuremath{\mbox{s}}\xspace}
 \newcommand{\ms}{\ensuremath{\mbox{ms}}\xspace}
 \newcommand{\ps}{\ensuremath{\mbox{ps}}\xspace}
-\newcommand{\pT}{\ensuremath{p_\text{T}}\xspace}
 \newcommand{\pL}{\ensuremath{p_\text{L}}\xspace}
 \newcommand{\xF}{\ensuremath{x_\text{F}}\xspace}
 \newcommand{\xpF}{\ensuremath{x'_\text{F}}\xspace}
 \newcommand{\minv}{\ensuremath{m_\text{inv}}\xspace}
+
+\newcommand{\pT}{\ensuremath{p_\text{T}}\xspace}
+\newcommand{\pp}{\ensuremath{p}\xspace}
+
+\newcommand{\logpT}{\ensuremath{\log_{10} p_\text{T}}\xspace}
+\newcommand{\logp}{\ensuremath{\log_{10} p}\xspace}
+
 
 %%%%%%%%%%%%% some software programs and generators
 %----- NA61 software
@@ -49,6 +55,7 @@
 \newcommand{\GheishaOld}{{\scshape Gheisha\,600}\xspace}
 \newcommand{\Gheisha}{{\scshape Gheisha}\xspace}
 \newcommand{\Corsika}{{\scshape Corsika}\xspace}
+\newcommand{\CRMC}{{\scshape CRMC}\xspace}
 \newcommand{\Venus}{{\scshape Venus}\xspace}
 \newcommand{\VenusLong}{{\scshape Venus\,4.12}\xspace}
 \newcommand{\GiBUU}{{\scshape GiBUU}\xspace}
@@ -98,7 +105,7 @@
 \def \lamb{$\Lambda$\xspace}
 \def \antilamb{$\bar{\Lambda}$\xspace}
 \def \lambs{$\Lambda(\bar{\Lambda})$\xspace}
-\def \kzeros{K$_{S}^{0}$\xspace}
+\def \kzeros{K$_\text{S}^{0}$\xspace}
 \def \pipi{$\pi^+\pi^-$\xspace}
 \def \vzero{$V^0$\xspace}
 \def \vzeros{$V^0$'s\xspace}
@@ -118,7 +125,6 @@
 \newcommand{\ich}{\ensuremath{j}\xspace}
 \newcommand{\ieps}{\ensuremath{k}\xspace}
 \newcommand{\neps}{\ensuremath{K}\xspace}
-\newcommand{\pp}{\ensuremath{p}\xspace}
 \newcommand{\iz}{\ensuremath{m}\xspace}
 \newcommand{\nz}{\ensuremath{M}\xspace}
 \newcommand{\iq}{\ensuremath{l}\xspace}
@@ -130,8 +136,8 @@
 \newcommand{\imass}{\ensuremath{i}\xspace}
 \newcommand{\nmass}{\ensuremath{I}\xspace}
 
-\newcommand{\impact}{\ensuremath{\mbox{$b_r$}}\xspace}
-\newcommand{\impactmax}{\ensuremath{\mbox{$b_r^\text{cut}$}}\xspace}
+\newcommand{\impact}{\ensuremath{\mbox{$b_\text{r}$}}\xspace}
+\newcommand{\impactmax}{\ensuremath{\mbox{$b_\text{r}^\text{cut}$}}\xspace}
 \newcommand{\decaydist}{\ensuremath{\mbox{$L_\text{decay}$}}\xspace}
 \newcommand{\decaydistmin}{\ensuremath{\mbox{$L_\text{decay}^\text{cut}$}}\xspace}
 \newcommand{\decaydistopt}{\ensuremath{\mbox{$L_\text{decay}^\text{cut, opt}$}}\xspace}
