--- a/figures_hadron.tex
+++ b/figures_hadron.tex
@@ -372,7 +372,7 @@
     \put(18,58){(f)}
   \end{overpic}
   
-  \caption{Relative standard deviation ($\sigma_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
+  \caption{Relative standard deviation ($\sigma_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig158w}
 \end{figure}
 
@@ -401,7 +401,7 @@
     \put(18,58){(f)}
   \end{overpic}
   
-  \caption{Relative standard deviation ($\sigma_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
+  \caption{Relative standard deviation ($\sigma_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig350r}
 \end{figure}
 
@@ -431,7 +431,7 @@
     \put(18,58){(f)}
   \end{overpic}
   
-  \caption{Relative standard deviation ($\sigma_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
+  \caption{Relative standard deviation ($\sigma_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig350w}
 \end{figure}
 
@@ -461,7 +461,7 @@
     \put(18,58){(f)}
   \end{overpic}
   
-  \caption{Average relative bias ($\delta_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
+  \caption{Average relative bias ($\delta_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:reldev158w}
 \end{figure}
 
@@ -490,7 +490,7 @@
     \put(18,58){(f)}
   \end{overpic}
   
-  \caption{Average relative bias ($\delta_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
+  \caption{Average relative bias ($\delta_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:reldev350r}
 \end{figure}
 
@@ -519,8 +519,8 @@
     \put(18,58){(f)}
   \end{overpic}
   
-  \caption{Average relative bias ($\delta_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
-  \label{fig:hadron:dedx:fit:fake:reldev350r}
+  \caption{Average relative bias ($\delta_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
+  \label{fig:hadron:dedx:fit:fake:reldev350w}
 \end{figure}
 
 
