--- a/lib.bib
+++ b/lib.bib
@@ -803,3 +803,12 @@ Proton-Proton Collisions at 158 GeV}",
   isbn         = "978-3-540-76683-4"
 }
 
+%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%% CRMC  %%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%
+
+@book{CRMC,
+  author       = "Pierog, T. and Baus, C. and Ulrich, R.", 
+  url          = "https://web.ikp.kit.edu/rulrich/crmc.html"
+}
+
