--- a/hadron.tex
+++ b/hadron.tex
@@ -78,7 +78,7 @@ in~\cref{sec:hadron:conclusions}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath \NASixtyOne experiment}
+\section{\NASixtyOne experiment}
 \label{sec:hadron:na61}
 
 The \NASixtyOne~\cite{\NASixtyOnePaper} is a fixed target experiment located in the
@@ -146,7 +146,7 @@ in Ref.~\cite{\NASixtyOnePaper}.
 \end{figure}
 
 %%%---------------------------------%%%
-\subsection{\boldmath Beam}
+\subsection{Beam}
 \label{sec:hadron:na61:beam}
 
 The CERN SPS is able to provide to the North Area experiments
@@ -165,7 +165,7 @@ with two beam momenta, 158 and 350 \GeVc.
 
 
 %%%---------------------------------%%%
-\subsection{\boldmath Beam detectors and trigger system}
+\subsection{Beam detectors and trigger system}
 \label{sec:hadron:na61:trigger}
 
 The beam detectors and the components of the trigger system are shown
@@ -213,7 +213,7 @@ is indeed a $\pi^-$.
 
 
 %%%---------------------------------%%%
-\subsection{\boldmath Time projection chambers}
+\subsection{Time projection chambers}
 \label{sec:hadron:na61:tpc}
 
 In~\cref{fig:hadron:na61:setup} one can see the
@@ -265,7 +265,7 @@ in Refs.~\cite{AntoniAThesis,\NASixtyOnePaper}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Data and simulation sets}
+\section{Data and simulation sets}
 \label{sec:hadron:data}
 
 The $\pi^-$+C data were collected by \NASixtyOne in 2009 at two beam momenta:
@@ -296,7 +296,7 @@ by the standard \NASixtyOne reconstruction chain~\cite{Abgrall:2011ae}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Event selection}
+\section{Event selection}
 \label{sec:hadron:event}
 
 
@@ -355,7 +355,7 @@ the event selection for the data and simulation sets.
 \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Phase space binning}
+\section{Phase space binning}
 \label{sec:hadron:binning}
 
 Both charged hadron and \vzero analyses were performed
@@ -409,7 +409,7 @@ binning used for the \vzero analysis.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Particle identification for the charged hadron analysis}
+\section{Particle identification for the charged hadron analysis}
 \label{sec:hadron:dedx}
 
 In this section we present the particle identification
@@ -454,7 +454,7 @@ the particle fractions of \pions, \kaons and \protonpm.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{\boldmath \boldmath Track selection}
+\subsection{Track selection}
 \label{sec:hadron:dedx:selection}
 
 A set of selection criteria were
@@ -513,7 +513,7 @@ RST and WST definitions.
 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath \boldmath \dedx measurements}
+\subsection[\dedx measurements]{\boldmath \dedx measurements}
 \label{sec:hadron:dedx:meas}
 
 The \dedx is defined as the energy lost by the
@@ -597,7 +597,7 @@ and the \dedx fit presented in~\cref{sec:hadron:dedx:model,sec:hadron:dedx:fit}.
 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath \dedx model}
+\subsection[\dedx model]{\boldmath \dedx model}
 \label{sec:hadron:dedx:model}
 
 To perform the \dedx fit , a model to describe the \dedx distributions
@@ -722,7 +722,7 @@ to perform the fit of the \eps distributions.
 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath \dedx fit strategy}
+\subsection[\dedx fit strategy]{\boldmath \dedx fit strategy}
 \label{sec:hadron:dedx:fit}
 
 The fitting procedure is performed by means of a binned maximum-likelihood method.
@@ -924,7 +924,7 @@ the particle fraction, the minimization could be performed
 analytically. 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath \dedx fit results}
+\subsection[\dedx fit results]{\boldmath \dedx fit results}
 \label{sec:hadron:dedx:fitresults}
 
 Examples of the fitted \dedx distributions are shown
@@ -1138,7 +1138,7 @@ The fractions from the target removed data set are shown in~\cref{sec:hadron:ded
 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath Simulated data ensembles, cuts and corrections}
+\subsection{Simulated data ensembles, cuts and corrections}
 \label{sec:hadron:dedx:sde}
 
 The Simulated Data Ensembles (SDEs) are large sets of
@@ -1387,7 +1387,7 @@ in~\cref{fig:hadron:dedx:fit:out158r,fig:hadron:dedx:fit:out158w,fig:hadron:dedx
 \clearpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath \vzero analysis}
+\section[\vzero analysis]{\boldmath \vzero analysis}
 \label{sec:hadron:vzero}
 
 In this section we describe the part of our analysis
@@ -1446,7 +1446,7 @@ the signal extraction results in~\cref{sec:hadron:vzero:results}.
 \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{\boldmath \vzero selection}
+\subsection[\vzero selection]{\boldmath \vzero selection}
 \label{sec:hadron:vzero:selection}
 
 
@@ -1478,7 +1478,7 @@ the systematic uncertainty will be estimated by varying the minimum number
 of clusters on both tracks from 30 to 20. 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath Signal extraction strategy}
+\subsection{Signal extraction strategy}
 \label{sec:hadron:vzero:signal}
 
 The signal extraction is done by fitting the \minv distribution
@@ -1640,7 +1640,7 @@ observed in the target inserted one.
 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath \vzero cuts}
+\subsection[\vzero cuts]{\boldmath \vzero cuts}
 \label{sec:hadron:vzero:cuts}
 
 The \vzero cuts were applied to the \minv data to reduce
@@ -1744,7 +1744,7 @@ The signal loss due to these cuts were taken into account
 at the Monte Carlo correction step, described in~\cref{sec:hadron:correction}.
 
 %%%---------------------------------%%%%
-\subsection{\boldmath Signal extraction results}
+\subsection{Signal extraction results}
 \label{sec:hadron:vzero:results}
 
 Examples of the fitted \minv distributions are shown
@@ -1876,7 +1876,7 @@ in~\cref{fig:hadron:vzero:signal:extracted:158,fig:hadron:vzero:signal:extracted
 \clearpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Monte Carlo corrections}
+\section{Monte Carlo corrections}
 \label{sec:hadron:correction}
 
 The measured number of events, tracks and \vzero
@@ -2039,7 +2039,7 @@ from weak decays will be approached in next section.
 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath Feed-down from weak decays}
+\subsection{Feed-down from weak decays}
 \label{sec:hadron:correction:fd}
 
 For the charged hadrons, the contribution of weak decays
@@ -2118,7 +2118,7 @@ on the systematic uncertainties of the spectra (see~\cref{sec:hadron:spec:syst})
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Spectra}
+\section{Spectra}
 \label{sec:hadron:spec}
 
 The final double-differential spectra for each
@@ -2173,7 +2173,7 @@ and in~\cref{sec:hadron:spec:int} we describe the procedure to
 integrate the double-differential spectra over \pT.
 
 %%%---------------------------------%%%%
-\subsection{\boldmath Statistical uncertainties}
+\subsection{Statistical uncertainties}
 \label{sec:hadron:spec:stat}
 
 The dominant contribution to the statistical uncertainties
@@ -2189,7 +2189,7 @@ is relatively very small.
 
 
 %%%---------------------------------%%%%
-\subsection{\boldmath Systematic uncertainties}
+\subsection{Systematic uncertainties}
 \label{sec:hadron:spec:syst}
 
 The sources of systematic uncertainties will be listed
@@ -2272,7 +2272,7 @@ In~\cref{sec:hadron:results}, both statistical and systematic uncertainties
 are shown separately for the particle spectra.
 
 %%%---------------------------------%%%%
-\subsection{\boldmath Integration over \pT}
+\subsection[Integration over \pT]{\boldmath Integration over \pT}
 \label{sec:hadron:spec:int}
 
 
@@ -2296,7 +2296,7 @@ is smaller than 5\% of the total for the charged hadrons and 20\% for the \vzero
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Results}
+\section{Results}
 \label{sec:hadron:results}
 
 Examples of the double-differential spectra are shown
@@ -2639,7 +2639,7 @@ for the \vzero particles.
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\boldmath Summary, discussions and conclusions}
+\section{Summary, discussions and conclusions}
 \label{sec:hadron:conclusions}
 
 In this chapter we have presented the
