--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -92,9 +92,14 @@
 \newcommand{\E}[1]{$10^{#1}$ \eV\xspace}
 
 
-\def \nmu{$N_{\mu}$\xspace}
-\def \xmax{$X_\text{max}$\xspace}
-\def \xmumax{$X^\mu_\text{max}$\xspace}
+\newcommand{\nmu}{\ensuremath{\mbox{$N_\mu$}}\xspace}
+\newcommand{\nmumean}{\ensuremath{\mbox{$\langle N_\mu\rangle$}}\xspace}
+\newcommand{\xmax}{\ensuremath{\mbox{$X_\text{max}$}}\xspace}
+\newcommand{\xmaxmean}{\ensuremath{\mbox{$\langle X_\text{max}\rangle$}}\xspace}
+\newcommand{\xmumax}{\ensuremath{\mbox{$X^\mu_\text{max}$}}\xspace}
+\newcommand{\xmumaxmean}{\ensuremath{\mbox{$\langle X^\mu_\text{max}\rangle$}}\xspace}
+\newcommand{\dEdX}{\ensuremath{\mbox{\text{d}$E$/\text{d}$X$}}\xspace}
+
 
 \def \pions{$\pi^\pm$\xspace}
 \def \kaons{K$^\pm$\xspace}
