--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,44 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Kampert:2012mx,
+      author         = "Kampert, Karl-Heinz and Unger, Michael",
+      title          = "{Measurements of the Cosmic Ray Composition with Air
+                        Shower Experiments}",
+      journal        = "Astropart. Phys.",
+      volume         = "35",
+      year           = "2012",
+      pages          = "660-678",
+      doi            = "10.1016/j.astropartphys.2012.02.004",
+      eprint         = "1201.0018",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1201.0018;%%"
+}
+
+@article{Matthews:2005sd,
+      author         = "Matthews, J.",
+      title          = "{A Heitler model of extensive air showers}",
+      journal        = "Astropart. Phys.",
+      volume         = "22",
+      year           = "2005",
+      pages          = "387-397",
+      doi            = "10.1016/j.astropartphys.2004.09.003",
+      SLACcitation   = "%%CITATION = APHYE,22,387;%%"
+}
+
+@article{Calcagni:2017tws,
+      author         = "Calcagni, L. and Canal, C. A. García and Sciutto, S. J.
+                        and Tarutina, T.",
+      title          = "{LHC updated hadronic interaction packages analysed up to
+                        cosmic-ray energies}",
+      year           = "2017",
+      eprint         = "1711.04723",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1711.04723;%%"
+}
+
 @article{Alt:2007aa,
       author         = "Alt, C. and others",
       title          = "{Pion and kaon production in central Pb + Pb collisions
@@ -801,6 +839,24 @@ Proton-Proton Collisions at 158 GeV}",
   year         = "2008"
   address      = "",
   isbn         = "978-3-540-76683-4"
+}
+
+@book{GaisserBook,
+  author       = "Gaisser, T.K. and Engel, R. and Resconi, E.", 
+  title        = "{Cosmic Rays and Particle Physics}",
+  publisher    = "Cambridge University Press",
+  year         = "2016"
+  address      = "",
+  isbn         = "978-0-521-01646-9"
+}
+
+@book{GriederBook,
+  author       = "Grieder, P. K. F.", 
+  title        = "{Extensive Air Showers}",
+  publisher    = "Springer",
+  year         = "2010"
+  address      = "",
+  isbn         = "978-3-540-76941-5"
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%
