--- a/showers.tex
+++ b/showers.tex
@@ -14,16 +14,6 @@ in Refs.~\cite{GaisserBook,GriederBook}.
 \section{Extensive air shower phenomenology}
 \label{sec:showers:phen}
 
-1) overview of the EAS, components, profiles
-
-2) electromagnetic component
-
-2.1) 
-
-2.2)
-
-3) hadronic component and muon production
-
 An EAS start with the collision of the primary cosmic ray particle
 with an atmospheric nucleus. After this first interaction, the secondary
 particle produced also interact with the atmosphere producing more
@@ -158,7 +148,42 @@ and the critical energy in which the probability of decaying is
 equivalent to interacting is 85 \GeV. These decays are responsible
 to produce the great majority of the muons of an air shower.
 The tipical number of interactions of charged pions before
-decaying into muons is 4--8.
+decaying into muons is 4--8. 
+
+
+Apart from pion decays, a considerably fraction of the muons reaching
+the ground is produced by the decay of charged kaons. In~\cite{} the muon
+production in air showers was studyied in details and it was found
+by using simulations that $\sim 90\%$ of the muons come from the decay
+of charged pions and $\sim 10\%$ of charged kaons. While these particles
+are called \emph{mother}, the particles which interacted hadronically
+with an atmospheric nucleus to produce them is are called \emph{grandmother}.
+Concerning then the properties of the grandmother particles,
+it was found that more than 70\% of them are pions, $\approx 20\%$ are nucleons
+and $\approx 6\%$ are kaons. In~\cref{} the energy distributions of the
+grandmother particles are shown and we can see the contribution from these
+different types of particles. The dominance of pions as gradmother is clear,
+as well as the fact that most of the interactions of the grandmother particles
+occur at energies of order of $\sim 100 \GeV$.
+
+
+Although the interaction of the grandmother particle is very important,
+it has to be noted that the whole chain of hadronic interactions, which are
+mostly pion-air interactions, influence the muon production. This means
+that any shower observable related to the muonic component is sensitive to the
+properties of hadronic interactions which occur along the shower, in particular
+to the particle production. 
+
+
+
+
+
+
+
+
+
+
+
 
 
 The hadrons themselves do not contribute directly to the shower observables,
@@ -172,11 +197,22 @@ by Pierre Auger (see~\cref{}).
 In~\cref{} we show the average longitudinal profile of
 the number of muons, as well as the muon production,
 for proton and iron initiated showers. The number of muons (\nmu) observed
-at a given atmospheric depth is a tipical quantity of the shower
-and it can be shown that \nmu relates with the primary energy and mass by
+at a given atmospheric depth is a tipical quantity of the shower.
+From simplistic analytic models and full Monte Carlo simulations,
+we can see that \nmu relates to the primary energy and mass as
 \begin{equation}
-  \nmu.
+  \nmumean \approx A^{1-\beta} E_0^\beta,
 \end{equation}
+where $\beta\approx 0.9$. 
+
+Although 
+
+The muon production in air showers 
+
+
+
+
+and it can be shown that \nmu relates with the primary energy and mass by
 HM and MC blabla. Composition and hadronic interactions.
 
 
